--- a/index.html
+++ b/index.html
@@ -36,8 +36,18 @@
         .shadow-image {
             box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -2px rgba(0, 0, 0, 0.1);
         }
+        /* تم إصلاح خطأ في استخدام @apply في CSS العادي */
         .nav-link {
-             @apply text-gray-700 hover:text-var(--color-primary) transition font-medium flex items-center p-2 rounded-md;
+             color: #4b5563; /* text-gray-700 */
+             transition: color 0.15s ease-in-out;
+             font-weight: 500;
+             display: flex;
+             align-items: center;
+             padding: 0.5rem;
+             border-radius: 0.375rem;
+        }
+        .nav-link:hover {
+            color: #4f46e5; /* var(--color-primary) */
         }
         /* تعديل Select2 ليناسب الاتجاه من اليمين لليسار */
         .select2-container .select2-selection--single,
@@ -85,7 +95,7 @@
                 <a href="#" onclick="show('home')" class="nav-link"><span class="ml-1">🏠</span> الرئيسية</a>
                 <a href="#" onclick="show('team')" class="nav-link"><span class="ml-1">👥</span> الفريق</a>
                 <a href="#" onclick="show('matches')" class="nav-link"><span class="ml-1">📅</span> المباريات</a>
-            </nav>
+                <a href="#" onclick="show('chat')" class="nav-link"><span class="ml-1">💬</span> الدردشة</a> </nav>
         </div>
     </header>
 
@@ -165,7 +175,16 @@
             </div>
         </section>
         
-        </main>
+        <section id="chat" class="page-content hidden">
+            <div class="text-center p-12 bg-white rounded-lg shadow-xl border-t-8 border-yellow-500">
+                <h2 class="text-4xl font-extrabold mb-4 text-gray-800">💬 الدردشة</h2>
+                <p class="text-2xl font-semibold text-red-600 mb-6">هذه الخدمة قيد الصيانة حاليًا.</p>
+                <p class="text-lg text-gray-600">نعتذر عن الإزعاج، وسنعود لخدمتكم فور الانتهاء من التحديثات اللازمة.</p>
+                 <svg class="w-20 h-20 text-yellow-500 mx-auto mt-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37a1.724 1.724 0 002.572-1.065z"></path><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"></path></svg>
+            </div>
+        </section>
+        
+    </main>
 
     <script>
         // *** هذا الجزء يعمل الآن بالكامل في ذاكرة المتصفح (Client-side) ***
@@ -181,13 +200,13 @@
             { id: 1, name: "ميمد", rating: 8.0, goals: 6, assists: 7, image: "ميمد.jpg", position: "خط وسط مهاجم", number: 10 },
             // حسن . خط وسط . رقم 5
             { id: 8, name: "حسن", rating: 8.6, goals: 7, assists: 7, image: "حسن.jpg", position: "خط وسط", number: 5 },
-            // ميلاد . مدافع رقم 4
-            { id: 3, name: "ميلاد", rating: 7.5, goals: 0, assists: 3, image: "ميلاد.jpg", position: "مدافع", number: 4 },
+            // ميلاد . مدافع رقم 4 - تم تحديث الأهداف (0->1) والتمريرات (3->5)
+            { id: 3, name: "ميلاد", rating: 7.5, goals: 1, assists: 5, image: "ميلاد.jpg", position: "مدافع", number: 4 },
             // مصباح مدافع رقم 2
             { id: 2, name: "مصباح", rating: 6.5, goals: 2, assists: 0, image: "مصباح.jpg", position: "مدافع", number: 2 },
-            // ديدي مدافع رقم 3 (سيلعب حارس في تشكيلة المباراة الأخيرة بناءً على طلبك)
+            // ديدي مدافع رقم 3
             { id: 4, name: "ديدي", rating: 7.8, goals: 0, assists: 3, image: "ديدي.jpg", position: "مدافع", number: 3 },
-            // عبدالسلام حارس رقم 1 (لم يحضر المباراة الأخيرة)
+            // عبدالسلام حارس رقم 1
             { id: 6, name: "عبدالسلام", rating: 0.0, goals: 0, assists: 0, image: "عبدالسلام.jpg", position: "حارس", number: 1 },
             // علي مدافع رقم 16
             { id: 10, name: "علي", rating: 2.0, goals: 0, assists: 0, image: "علي.jpg", position: "مدافع", number: 16 },
@@ -215,8 +234,9 @@
                     { playerId: 1, goals: 6, assists: 7, rating: 8.0 }, 
                     { playerId: 8, goals: 7, assists: 7, rating: 8.6 }, 
                     { playerId: 2, goals: 2, assists: 0, rating: 6.5 }, 
-                    { playerId: 3, goals: 0, assists: 3, rating: 7.5 }, 
-                    { playerId: 4, goals: 0, assists: 3, rating: 7.8 }, // ديدي كان في التشكيلة ولديه تقييم
+                    // ميلاد (ID: 3) - تم تحديث الأهداف (0->1) والتمريرات (3->5)
+                    { playerId: 3, goals: 1, assists: 5, rating: 7.5 }, 
+                    { playerId: 4, goals: 0, assists: 3, rating: 7.8 }, 
                     { playerId: 11, goals: 0, assists: 0, rating: 6.0 }, 
                     { playerId: 10, goals: 0, assists: 0, rating: 2.0 }  
                 ]
@@ -579,8 +599,9 @@
                     } else {
                         dateStr = dateObj.toLocaleDateString('ar-EG', { year: 'numeric', month: 'long', day: 'numeric' });
                         timeStr = dateObj.toLocaleTimeString('ar-EG', { hour: '2-digit', minute: '2-digit' });
-                        day = dateObj.getDate();
-                        month = dateObj.getMonth() + 1;
+                        // للتأكد من أن اليوم والشهر مكونان من رقمين
+                        day = dateObj.getDate().toString().padStart(2, '0');
+                        month = (dateObj.getMonth() + 1).toString().padStart(2, '0');
                     }
                 } catch (e) {
                     dateStr = 'خطأ في التاريخ';
@@ -662,10 +683,7 @@
             `;
         }
 
-        // **********************************************
-        // دالة جديدة لرسم التشكيلة المطلوبة (1-2-2-1)
-        // تم إصلاح تداخل المدافعين باستخدام justify-around
-        // **********************************************
+        // دالة لرسم التشكيلة المطلوبة (1-2-2-1)
         function renderCustomFormation() {
             // تحديد اللاعبين حسب الأسماء (هذه التشكيلة هي لتلك المباراة التاريخية الأخيرة)
             const striker = players.find(p => p.name === "جهاد");        // هجوم (Striker)
@@ -673,7 +691,7 @@
             const midRight = players.find(p => p.name === "حسن");       // خط وسط (Midfield)
             const defLeft = players.find(p => p.name === "ميلاد");       // مدافع (Left Center Back)
             const defRight = players.find(p => p.name === "مصباح");      // مدافع (Right Center Back)
-            const goalie = players.find(p => p.name === "ديدي");         // ديدي كحارس مرمى (بناءً على طلب المستخدم)
+            const goalie = players.find(p => p.name === "ديدي");         // ديدي كحارس مرمى
 
             // دمج دالة getPlayerIcon هنا لضمان استخدامها الصحيح
             const localGetPlayerIcon = getPlayerIcon;
@@ -690,7 +708,7 @@
                         ${localGetPlayerIcon(striker)}
                     </div>
 
-                    <div class="flex justify-between w-full px-4 sm:px-8">
+                    <div class="flex justify-around w-full px-4 sm:px-8">
                         ${localGetPlayerIcon(midLeft)}
                         ${localGetPlayerIcon(midRight)}
                     </div>
@@ -768,7 +786,7 @@
                     // تحديد رجل المباراة (أعلى تقييم)
                     const motm = match.stats.reduce((top, current) => (current.rating > top.rating ? current : top), { rating: -1 });
                     const motmPlayer = players.find(p => p.id === motm.playerId);
-                    bestPlayerMotm = motmPlayer && motm.rating > 0 ? `${motmPlayer.name} (#${motmPlayer.number || 'N/A'})` : 'لا يوجد';
+                    bestPlayerMotm = motmPlayer && motm.rating > 0 ? `${motmPlayer.name} (#${motmPlayer.number || 'N/A'}) (بتقييم ${motm.rating.toFixed(1)})` : 'لا يوجد';
                 }
 
                 const goalScorersList = playerStats.filter(s => s.goals > 0 || s.assists > 0 || s.rating > 0).map(s => `<li>${s.name} - التقييم: ${s.rating.toFixed(1)} (${s.goals} أهداف, ${s.assists} تمريرات حاسمة)</li>`).join('');
